objects/CustFieldObject__c.object
<CustomObject>
    <fields>
        <fullName>GlobalPickListA__c</fullName>
        <label>GlobalPickListA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GlobalPickList</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RestrictedPickList__c</fullName>
        <label>RestrictedPickList</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RestrictedPickListTypeA</fullName>
                </value>
                <value>
                    <fullName>RestrictedPickListTypeB</fullName>
                </value>
                <value>
                    <fullName>RestrictedPickListTypeC</fullName>
                </value>
                <value>
                    <fullName>RestrictedPickListTypeD</fullName>
                </value>
                <value>
                    <fullName>RestrictedPickListTypeE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnrestrictedPickListReqValue__c</fullName>
        <label>UnrestrictedPickListReqValue</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UnrestrictedPickListReqValueTypeA</fullName>
                </value>
                <value>
                    <fullName>UnrestrictedPickListReqValueTypeB</fullName>
                </value>
                <value>
                    <fullName>UnrestrictedPickListReqValueTypeC</fullName>
                </value>
                <value>
                    <fullName>UnrestrictedPickListReqValueTypeD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnrestrictedPickList__c</fullName>
        <label>UnrestrictedPickList</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UnrestrictedPickListA</fullName>
                </value>
                <value>
                    <fullName>UnrestrictedPickListB</fullName>
                </value>
                <value>
                    <fullName>UnrestrictedPickListC</fullName>
                </value>
                <value>
                    <fullName>UnrestrictedPickListD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CustFieldObject</label>
    <nameField>
        <label>CustFieldObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustFieldObjectsPlural</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>SomeNewListView</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>SomeNewListView</label>
        <sharedTo>
            <roleAndSubordinates>CEO</roleAndSubordinates>
            <roleAndSubordinates>COO</roleAndSubordinates>
            <roleAndSubordinates>ChannelSalesTeam</roleAndSubordinates>
            <roleAndSubordinates>CustomerSupportInternational</roleAndSubordinates>
            <roleAndSubordinates>DirectorChannelSales</roleAndSubordinates>
            <roleAndSubordinates>DirectorDirectSales</roleAndSubordinates>
            <roleAndSubordinates>EasternSalesTeam</roleAndSubordinates>
            <roleAndSubordinates>InstallationRepairServices</roleAndSubordinates>
            <roleAndSubordinates>MarketingTeam</roleAndSubordinates>
            <roleAndSubordinates>SVPCustomerServiceSupport</roleAndSubordinates>
            <roleAndSubordinates>SVPHumanResources</roleAndSubordinates>
            <roleAndSubordinates>SVPSalesMarketing</roleAndSubordinates>
            <roleAndSubordinates>VPInternationalSales</roleAndSubordinates>
            <roleAndSubordinates>VPMarketing</roleAndSubordinates>
            <roleAndSubordinates>VPNorthAmericanSales</roleAndSubordinates>
            <roleAndSubordinates>WesternSalesTeam</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <validationRules>
        <fullName>AValidRule</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL('nonnull')</errorConditionFormula>
        <errorMessage>There is an error</errorMessage>
    </validationRules>
</CustomObject>